--- a/src/app/apple-card/apple-card-animation/apple-card-animation.component.scss
+++ b/src/app/apple-card/apple-card-animation/apple-card-animation.component.scss
@@ -3,7 +3,7 @@ $white-color: #ffffff;
 $black-color: #000000;
 
 @mixin set-bg-image($imageName) {
-  background-image: url("~/images/#{$imageName}.png");
+  background-image: url("~/assets/#{$imageName}.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
