--- a/src/app/apple-card/apple-card-animation/apple-card-animation.component.html
+++ b/src/app/apple-card/apple-card-animation/apple-card-animation.component.html
@@ -1,5 +1,4 @@
-<ActionBar title="Apple Card">
-</ActionBar>
+<ActionBar title="Apple Card"></ActionBar>
 <GridLayout id="appleCardParentView" rows="auto,*,auto" columns="*" class="theme2">
   <GridLayout rows="*" columns="auto,auto,auto,auto,auto" class="content-buttons color-selector">
     <Button row="0" col="0" class="theme2-bg" (tap)="onThemeSelectorTap('theme2')"></Button>
