--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
-@import "~@nativescript/theme/css/core.css";
-@import "~@nativescript/theme/css/blue.css";
+@import '@nativescript/theme/css/core.css';
+@import '@nativescript/theme/css/default.css';
 
 /* Place any CSS rules you want to apply on both iOS and Android here.
 This is where the vast majority of your CSS code goes. */
@@ -17,101 +17,102 @@ This is where the vast majority of your CSS code goes. */
   font-family: "Font Awesome 5 Free", "fa-solid-900";
   font-weight: 900; 
 }
-  
+
 @keyframes flip-h-back {
-  0% {
-    transform: rotate3d(0, 0, 0); 
+    0% {
+      transform: rotate3d(0, 0, 0); 
+    }
+    49.99% {
+      transform: rotate3d(0, -89.99, 0); 
+    }
+    50.01% {
+      transform: rotate3d(0, -90, 0);
+      opacity: 0; 
+    }
+    100% {
+      transform: rotate3d(0, -180, 0); 
+    }
   }
-  49.99% {
-    transform: rotate3d(0, -89.99, 0); 
+    
+  @keyframes flip-h-front {
+    0% {
+      transform: rotate3d(0, 180, 0); 
+    }
+    49.99% {
+      transform: rotate3d(0, 90.01, 0); 
+    }
+    50% {
+      transform: rotate3d(0, 90, 0);
+      opacity: 1; 
+    }
+    100% {
+      transform: rotate3d(0, 0, 0); 
+    }
   }
-  50.01% {
-    transform: rotate3d(0, -90, 0);
-    opacity: 0; 
+    
+  @keyframes flip-v-back {
+    0% {
+      transform: rotate3d(0, 0, 0); 
+    }
+    49.99% {
+      transform: rotate3d(-89.99, 0, 0); 
+    }
+    50% {
+      transform: rotate3d(-90, 0, 0);
+      opacity: 0; 
+    }
+    100% {
+      transform: rotate3d(-180, 0, 0); 
+    }
   }
-  100% {
-    transform: rotate3d(0, -180, 0); 
+    
+  @keyframes flip-v-front {
+    0% {
+      transform: rotate3d(180, 0, 0); 
+    }
+    49.99% {
+      transform: rotate3d(90.1, 0, 0); 
+    }
+    50% {
+      transform: rotate3d(90, 0, 0);
+      opacity: 1; 
+    }
+    100% {
+      transform: rotate3d(0, 0, 0); 
+    }
   }
-}
+    
+  .flip-v-back {
+    animation-name: flip-v-back;
+    animation-delay: 0;
+    animation-duration: 0.7s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards; 
+  }
   
-@keyframes flip-h-front {
-  0% {
-    transform: rotate3d(0, 180, 0); 
+  .flip-v-front {
+    opacity: 0;
+    animation-name: flip-v-front;
+    animation-delay: 0;
+    animation-duration: 0.7s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards; 
   }
-  49.99% {
-    transform: rotate3d(0, 90.01, 0); 
-  }
-  50% {
-    transform: rotate3d(0, 90, 0);
-    opacity: 1; 
-  }
-  100% {
-    transform: rotate3d(0, 0, 0); 
-  }
-}
   
-@keyframes flip-v-back {
-  0% {
-    transform: rotate3d(0, 0, 0); 
+  .flip-h-back {
+    animation-name: flip-h-back;
+    animation-delay: 0;
+    animation-duration: 0.7s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards; 
   }
-  49.99% {
-    transform: rotate3d(-89.99, 0, 0); 
-  }
-  50% {
-    transform: rotate3d(-90, 0, 0);
-    opacity: 0; 
-  }
-  100% {
-    transform: rotate3d(-180, 0, 0); 
-  }
-}
   
-@keyframes flip-v-front {
-  0% {
-    transform: rotate3d(180, 0, 0); 
+  .flip-h-front {
+    opacity: 0;
+    animation-name: flip-h-front;
+    animation-delay: 0;
+    animation-duration: 0.7s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards; 
   }
-  49.99% {
-    transform: rotate3d(90.1, 0, 0); 
-  }
-  50% {
-    transform: rotate3d(90, 0, 0);
-    opacity: 1; 
-  }
-  100% {
-    transform: rotate3d(0, 0, 0); 
-  }
-}
   
-.flip-v-back {
-  animation-name: flip-v-back;
-  animation-delay: 0;
-  animation-duration: 0.7s;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards; 
-}
-
-.flip-v-front {
-  opacity: 0;
-  animation-name: flip-v-front;
-  animation-delay: 0;
-  animation-duration: 0.7s;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards; 
-}
-
-.flip-h-back {
-  animation-name: flip-h-back;
-  animation-delay: 0;
-  animation-duration: 0.7s;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards; 
-}
-
-.flip-h-front {
-  opacity: 0;
-  animation-name: flip-h-front;
-  animation-delay: 0;
-  animation-duration: 0.7s;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards; 
-}
